objects/Project__c.object
<CustomObject>
    <label>Project</label>
    <nameField>
        <displayFormat>Project_ID-{0000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Name__c</fullName>
        <description>Project Name</description>
        <inlineHelpText>Project Name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of project(e.g. Billabel or not billable)</description>
        <inlineHelpText>Type of project(e.g. Billabel or not billable)</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>General notes on the project</description>
        <inlineHelpText>General notes on the project</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of the project(Planned, In progress, Completed, Canceled)</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Staus of the project(Green, Yellow, Red)</description>
        <inlineHelpText>Staus of the project(Green, Yellow, Red)</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date Project ends</description>
        <inlineHelpText>Date Project ends</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the customer been invoiced?</description>
        <inlineHelpText>Has the customer been invoiced?</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Geographic location of this project</description>
        <inlineHelpText>Geographic location of this project</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date Project begins</description>
        <inlineHelpText>Date Project begins</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <description>Explanation of the project status</description>
        <inlineHelpText>Explanation of the project status</inlineHelpText>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billabel_Hours__c</fullName>
        <description>Number of billable hours allocated for this project, usually specified in the SOW.</description>
        <inlineHelpText>Number of billable hours allocated for this project, usually specified in the SOW.</inlineHelpText>
        <label>Billabel Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulting_Budget__c</fullName>
        <description>Amount budgeted for consulting portion of this project</description>
        <inlineHelpText>Amount budgeted for consulting portion of this project</inlineHelpText>
        <label>Consulting Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currenty_Assigned__c</fullName>
        <formula>Start_Date__c  &lt;=  TODAY()  &amp;&amp;  End_Date__c  &gt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currenty Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Assigned_Hours__c</fullName>
        <label>Total Assigned Hours</label>
        <summarizedField>Assignment__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Assigned_Hours_2__c</fullName>
        <label>Total Assigned Hours 2</label>
        <summarizedField>Assignment__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours_Logged__c</fullName>
        <label>Total Billable Hours Logged</label>
        <summarizedField>TimeCard__c.Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>TimeCard__c.Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TimeCard__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours_Invoiced__c</fullName>
        <label>Total Billable Hours Invoiced</label>
        <summarizedField>TimeCard__c.Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>TimeCard__c.Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TimeCard__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TimeCard__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_NonBillable_hours_logged__c</fullName>
        <label>Total NonBillable hours logged</label>
        <summarizedField>TimeCard__c.Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>TimeCard__c.Billable__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TimeCard__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours_Uninvoiced__c</fullName>
        <label>Total Billable Hours Uninvoiced</label>
        <summarizedField>TimeCard__c.Total_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>TimeCard__c.Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TimeCard__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TimeCard__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Revenue_from_Assignment__c</fullName>
        <label>Total Planned Revenue from Assignment</label>
        <summarizedField>Assignment__c.Planned_Revenue__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <recordTypes>
        <fullName>Salesforce_Projects</fullName>
        <active>true</active>
        <description>Salesforce projects</description>
        <label>Salesforce Projects</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Source_Projects</fullName>
        <active>true</active>
        <description>Open Source projects</description>
        <label>Open Source Projects</label>
    </recordTypes>
</CustomObject>